objects/Todo__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Serene</fullName>
                </value>
                <value>
                    <fullName>MV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Todo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ExtID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Todos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>